--- a/Desafios/estilo/style.css
+++ b/Desafios/estilo/style.css
@@ -145,7 +145,7 @@ div.video {
     background-color: var(--cor5);
     margin: 0px -20px 30px;
     padding: 20px;
-    text-align: center;
+    background-position: center center;
     
     
    
