--- a/Desafios/Desafio012/style.css
+++ b/Desafios/Desafio012/style.css
@@ -1,12 +1,36 @@
 @charset "UTF-8";
 
+
+
+
+
+@import url('https://fonts.googleapis.com/css2?family= Passion +One & display=swap');
+@import url('https://fonts.googleapis.com/css2?family= Sriracha & display=swap') ;
+    
+
 *{
     margin: 0px;
     padding: 0px;
+}
 
+
+
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursiva;
+    --fonte3: 'Sriracha', cursiva;
 }
 
 html, body{
+    font-family: var(--fonte1);
     min-height: 100vh;
     background-color: darkgray;
 }
@@ -19,8 +43,10 @@ header{
 
 }
 header > h1 {
+    font-family: var(--fonte2);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 8.5vw;
 
 }
 header > p {
@@ -37,10 +63,12 @@ a:hover{
     text-decoration: underline;
 }
 section{
+    font-family: var(--fonte3);
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 3.5vw;
 
     
 }
@@ -58,7 +86,8 @@ section.imagem{
 }
 
 section.imagem > p{
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.158);
 
 
