finalizando projeto cordel

--- a/Desafios/Desafio012/style.css
+++ b/Desafios/Desafio012/style.css
@@ -1,17 +1,9 @@
+
+
+
 @charset "UTF-8";
 
-
-
-
-
-@import url('https://fonts.googleapis.com/css2?family= Passion +One & display=swap');
-@import url('https://fonts.googleapis.com/css2?family= Sriracha & display=swap') ;
     
-
-*{
-    margin: 0px;
-    padding: 0px;
-}
 
 
 
@@ -71,16 +63,21 @@ section{
     font-size: 3.5vw;
 
     
+
+    
 }
 
 section.normal {
-    background-color: white;
+    background-color: rgb(233, 228, 228);
     color: black;
 
 }
 section.imagem{
-    background-color: rgb(63, 61, 61);
+    background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.356) ;
+    background-attachment: fixed;
+    
 
 
 }
@@ -88,8 +85,27 @@ section.imagem{
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.158);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
 
+
+}
+
+section > p{
+    padding-bottom: 2em;
+}
+
+section#img01{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+
+}
+
+section#img02{
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
+    background-size: cover;
 
 }
 
